# IMDAvoider3

./: CLAUDE.md  IMD1.txt  IMD6.txt  IMD9.txt  LED.txt  README.md  app.py  apply_tertiary_filter.py  calculate_4freq_ratings.py  create_secondary_ranking.py  filter10.txt  filter15.txt  filter18.txt  filter20.txt  filter5.txt  freq.txt  imd.py  imd3.py  pyproject.toml  result.txt  run_complete_workflow.py  secondary_ranking.txt  vtxtable.txt
original_files/: app.py
