[project]
name = "imdavoider"
version = "0.1.0"
description = "Frequency segment optimization tool for drone avoidance systems"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]